# aethon

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
aethon/: __init__.py  __main__.py  config.py  maintenance.py  meridian_manager.py  setup_wizard.py  token_meter.py
aethon/agent/: __init__.py  ambient.py  capability_diet.py  context_updater.py  executor.py  fake_model.py  intake.py  model_factory.py  planning.py  prompt.py  replay.py  repo_map.py  runtime.py  session_recording.py  shell_context.py  specialists.py  task_ledger.py  teams.py
aethon/agent/hooks/: __init__.py  anglicization_guard.py  approval.py  compaction.py  completion_gate.py  input_validator.py  lsp.py  memory_guard.py  output_guard.py  post_edit_verify.py  repo_map_hook.py  security.py  session_recorder.py  telemetry.py  untrusted_content.py
aethon/channels/: __init__.py  base.py  cli.py  discord_adapter.py  slack_adapter.py  telegram.py  webchat.py  whatsapp.py
aethon/gateway/: __init__.py  netsec.py  router.py  server.py  service.py  single_instance.py  webhooks.py
aethon/launcher/: __init__.py  macos_menubar.py
aethon/memory/: __init__.py  vector.py
aethon/sops/: runner.py
aethon/tools/: __init__.py  ambient.py  context_tool.py  delegate.py  learning.py  lsp_tool.py  manage_messages.py  manage_tools.py  mcp_integration.py  mcp_server.py  memory_tool.py  messaging.py  scheduler.py  shell_sandbox.py  specialist_tool.py  task_tool.py
aethon/ui/: __init__.py  dashboard.py  event_bus.py  log_handler.py
aethon/ui/static/: index.html
codex-proxy/: .env.example  .gitignore  API.md  API_CN.md  CHANGELOG.md  DESIGN.md  Dockerfile  README.md  README_EN.md  docker-compose.yml  docker-entrypoint.sh  docker-healthcheck.sh  opencode.json  package-lock.json  package.json  tsconfig.scripts.json  vitest.config.ts
codex-proxy/.github/guides/: bump-version-drift-migration.md  claude-code-setup.md
codex-proxy/.github/scripts/: electron-smoke.ps1  electron-smoke.sh  generate-release-notes.sh  translate-notes.js
codex-proxy/.github/workflows/: bump-electron-beta.yml  bump-electron.yml  ci-quality.yml  docker-publish.yml  promote-dev-to-master.yml  release.yml
codex-proxy/config/: default.yaml  extraction-patterns.yaml
codex-proxy/config/prompts/: automation-response.md  desktop-context.md  pr-generation.md  title-generation.md
codex-proxy/native/: Cargo.toml  index.js  package-lock.json  package.json
codex-proxy/public/: index.html
codex-proxy/public/assets/: index-CKxyzcmw.css  index-DuL-YG74.js
codex-proxy/scripts/poc/: poc-libcurl-ffi.ts
codex-proxy/shared/: account-transfer-client.test.ts  account-transfer-client.ts  types.ts
codex-proxy/shared/hooks/: use-accounts.ts  use-api-keys.ts  use-error-logs.test.ts  use-error-logs.ts  use-general-settings.ts  use-ollama-settings.ts  use-proxies.ts  use-proxy-assignments.ts  use-test-connection.ts  use-update-status.ts  use-usage-stats.ts
codex-proxy/shared/i18n/: translations.ts
codex-proxy/shared/theme/: context.tsx
codex-proxy/shared/utils/: clipboard.ts  format.ts  host.ts  usage-stats.ts
codex-proxy/src/: config-loader.ts  config-schema.ts  config.ts  index.ts  paths.ts  update-checker.ts
codex-proxy/src/auth/: account-lifecycle.ts  account-persistence.ts  account-pool.ts  account-registry.ts  active-quota-refresher.ts  api-key-catalog.ts  api-key-model-cache.ts  api-key-pool.ts  cf-path-block-tracker.ts  chatgpt-oauth.ts  health-check.ts  jwt-utils.ts  quota-skip.ts  quota-utils.ts  quota-warnings.ts  refresh-scheduler.ts  rotation-strategy.ts  session-affinity.ts  types.ts  usage-refresher.ts  usage-stats.ts
codex-proxy/src/codex-app-server/: client.ts  types.ts
codex-proxy/src/fingerprint/: manager.ts
codex-proxy/src/middleware/: api-key-auth.ts  cors.ts  dashboard-auth.ts  error-handler.ts  logger.ts  request-id.ts
codex-proxy/src/models/: model-fetcher.ts
codex-proxy/src/ollama/: server.ts
codex-proxy/src/proxy/: adapter-factory.ts  anthropic-upstream.ts  codex-api.ts  codex-sse.ts  codex-types.ts  cookie-jar.ts  error-classification.ts  fetch-dispatcher.ts  gemini-upstream.ts  openai-upstream.ts  proxy-pool.ts  rate-limit-headers.ts  responses-upstream.ts  upstream-adapter.ts  upstream-router-bootstrap.ts  ws-pool.ts  ws-transport.ts
codex-proxy/src/routes/: accounts.ts  api-keys.ts  (+13 more)
codex-proxy/tests/: README.md
codex-proxy/web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docker/: config.docker.yaml
docs/: ARCHITECTURE.md  CAPABILITIES.md  PHASE-1-CHECKLIST.md  PHASE-1-CORE.md  PHASE-2-CHANNELS.md  PHASE-2-CHECKLIST.md  PHASE-3-CHECKLIST.md  PHASE-3-MULTIAGENT.md  PHASE-4-POLISH.md  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  aethon-blueprint.md  openclaw-reference.md  qwen3-coder-next-reference.md  strands-agents-reference.md
docs/product/: API-REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  GETTING-STARTED.md  PRODUCT.md
paper/: aethon-whitepaper.tex
tests/: __init__.py  conftest.py  test_ambient.py  test_anglicization_guard.py  test_approval_hook.py  test_backup_service.py  test_capability_diet.py  test_channels_base.py  test_cli_approval.py  test_compaction.py  test_completion_gate.py  test_config.py  test_context_recovery.py  test_context_tool.py  test_context_updater.py  test_dashboard.py  test_dashboard_recordings.py  test_dashboard_security.py  test_delegate.py  test_discord.py  test_dynamic_specialists.py  test_e2e_boot.py  test_error_replies.py  test_event_bus.py  test_executor.py  test_gateway.py  test_input_validator.py  test_intake.py  test_integration.py  test_launcher.py  test_log_handler.py  test_logging_setup.py  test_lsp.py  test_manage_tools.py  test_mcp_integration.py  test_mcp_server.py  test_memory_guard.py  test_memory_tool.py  test_meridian_manager.py  test_messaging.py  (+33 more)
website/: docusaurus.config.js  package-lock.json  sidebars.js
website/docs/: intro.md
(+388 files in other folders)
