[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aethon"
version = "0.1.0"
description = "Personal AI assistant powered by Strands Agents SDK"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "Mert Özbaş", email = "mertozbas@gmail.com" }]
requires-python = ">=3.10"

dependencies = [
    # Core
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.1.0",
    "strands-meridian>=0.1.0",  # Claude via Claude Max quota (default provider)
    "strands-agents-sops>=1.0.0",  # built-in SOPs (enabled by default)
    "apscheduler>=3.10.0",  # scheduler (enabled by default)

    # Gateway
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=12.0",

    # Config
    "pyyaml>=6.0",
    "pydantic>=2.4.0",

    # CLI
    "prompt-toolkit>=3.0.0",
    "rich>=14.0.0",
    "click>=8.0.0",

    # HTTP
    "requests>=2.31.0",

    # Channels — all entry points (CLI + WebChat + messaging bots) ship in one package
    "aiogram>=3.0.0",
    "discord.py>=2.0.0",
    "slack-bolt>=1.18.0",

    # Memory (vector store)
    "aiosqlite>=0.19.0",
]

[project.scripts]
aethon = "aethon.__main__:main"

[project.optional-dependencies]
# Optional, opt-in features. Core install already covers CLI + WebChat + dashboard
# + Telegram/Discord/Slack + memory + SOPs + scheduler.
ollama = [
    "ollama>=0.3.0",  # local-inference provider
]
whatsapp = [
    "neonize>=0.3.0",  # experimental
]
mcp = [
    "mcp>=1.0.0",
]
all = ["aethon[ollama,whatsapp,mcp]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
markers = [
    "ollama: tests that require a running Ollama instance",
]
