[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aethon-ai"
version = "0.1.1"
description = "Personal AI assistant powered by Strands Agents SDK"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "Mert Özbaş", email = "mertozbas@gmail.com" }]
requires-python = ">=3.10"

dependencies = [
    # Core
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.1.0",
    "strands-agents-sops>=1.0.0",  # built-in SOPs (enabled by default)
    "apscheduler>=3.10.0",  # scheduler (enabled by default)
    "openai>=1.0.0",  # default model provider (also any OpenAI-compatible endpoint)

    # Gateway
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=12.0",

    # Config
    "pyyaml>=6.0",
    "pydantic>=2.4.0",

    # CLI
    "prompt-toolkit>=3.0.0",
    "rich>=14.0.0",
    "click>=8.0.0",

    # HTTP
    "requests>=2.31.0",

    # Channels — all entry points (CLI + WebChat + messaging bots) ship in one package
    "aiogram>=3.0.0",
    "discord.py>=2.0.0",
    "slack-bolt>=1.18.0",

    # Memory (vector store)
    "aiosqlite>=0.19.0",
]

[project.scripts]
aethon = "aethon.__main__:main"
aethon-menubar = "aethon.launcher.macos_menubar:main"  # macOS menu-bar launcher ([launcher-macos])

[project.urls]
Homepage = "https://github.com/mertozbas/aethon"
Repository = "https://github.com/mertozbas/aethon"
Issues = "https://github.com/mertozbas/aethon/issues"
Documentation = "https://github.com/mertozbas/aethon/tree/main/docs"
Changelog = "https://github.com/mertozbas/aethon/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Optional, opt-in features. Core install already covers CLI + WebChat + dashboard
# + Telegram/Discord/Slack + memory + SOPs + scheduler + the OpenAI provider.
anthropic = [
    "anthropic>=0.40.0",  # the `anthropic` provider (Claude via an Anthropic API key)
]
ollama = [
    "ollama>=0.3.0",  # local-inference provider
]
whatsapp = [
    "neonize>=0.3.0",  # experimental
]
mcp = [
    "mcp>=1.0.0",
]
scraper = [
    "beautifulsoup4>=4.9.0",  # HTML/XML parsing for the `scraper` tool
]
github = [
    "colorama>=0.4.0",  # colored output for `use_github` (requests/rich already core)
]
jsonrpc = [
    "websockets>=12.0",  # WebSocket transport for `jsonrpc` (already in core deps)
]
macos = [
    # Richer Markdown<->HTML for `apple_notes`; it degrades to a naive regex
    # fallback when absent. `use_mac` needs nothing beyond the stdlib + osascript.
    "html2text>=2.0.0",
    "mistune>=3.0.0",
]
lsp = [
    # Primary Python language server for the `lsp` tool. Other languages: install
    # typescript-language-server / gopls / rust-analyzer / clangd on PATH yourself.
    "pyright>=1.1.0",
]
computer = [
    "pyautogui>=0.9.53",  # screen/mouse/keyboard automation for `use_computer`
]
launcher-macos = [
    "rumps>=0.4.0",  # menu-bar launcher (aethon-menubar)
]
all = ["aethon-ai[anthropic,ollama,whatsapp,mcp,scraper,github,jsonrpc,macos,lsp,computer]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
markers = [
    "ollama: tests that require a running Ollama instance",
    "e2e: end-to-end boot tests that spawn a subprocess and bind a socket (deselect with -m 'not e2e')",
]

# Distribution name is "aethon-ai"; the importable package and CLI stay "aethon".
[tool.hatch.build.targets.wheel]
packages = ["aethon"]
