[package]
name = "codex-tls"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["async", "napi9"] }
napi-derive = "2"
reqwest = { version = "0.12.28", default-features = false, features = [
  "rustls-tls-native-roots",
  "stream",
  "gzip",
  "brotli",
  "zstd",
  "deflate",
  "http2",
  "socks",
] }
# Pin rustls to match real Codex Desktop (0.23.36, not 0.23.37)
rustls = "=0.23.36"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
opt-level = "z"
